@@ -2373,7 +2373,7 @@ name|totalNumDocs
 init|=
 name|reader
 operator|.
-name|numDocs
+name|maxDoc
 argument_list|()
 decl_stmt|;
 name|Set
@@ -2439,19 +2439,6 @@ name|term
 argument_list|)
 argument_list|)
 decl_stmt|;
-comment|// docFreq counts deletes
-if|if
-condition|(
-name|totalNumDocs
-operator|<
-name|docFreq
-condition|)
-block|{
-name|docFreq
-operator|=
-name|totalNumDocs
-expr_stmt|;
-block|}
 comment|// IDF algorithm taken from DefaultSimilarity class
 name|float
 name|idf
@@ -2464,9 +2451,6 @@ name|Math
 operator|.
 name|log
 argument_list|(
-operator|(
-name|float
-operator|)
 name|totalNumDocs
 operator|/
 call|(
