@@ -342,18 +342,8 @@ name|numDocs
 init|=
 name|reader
 operator|.
-name|numDocs
+name|maxDoc
 argument_list|()
-operator|-
-name|reader
-operator|.
-name|numDeletedDocs
-argument_list|()
-decl_stmt|;
-name|float
-name|weight
-init|=
-literal|0
 decl_stmt|;
 while|while
 condition|(
@@ -426,6 +416,41 @@ operator|.
 name|nextDoc
 argument_list|()
 expr_stmt|;
+comment|// For weight look here: http://lucene.apache.org/core/3_6_0/api/core/org/apache/lucene/search/DefaultSimilarity.html
+specifier|final
+name|float
+name|weight
+init|=
+call|(
+name|float
+call|)
+argument_list|(
+name|Math
+operator|.
+name|log
+argument_list|(
+name|numDocs
+operator|/
+call|(
+name|double
+call|)
+argument_list|(
+name|reader
+operator|.
+name|docFreq
+argument_list|(
+name|fieldName
+argument_list|,
+name|text
+argument_list|)
+operator|+
+literal|1
+argument_list|)
+argument_list|)
+operator|+
+literal|1.0
+argument_list|)
+decl_stmt|;
 specifier|final
 name|int
 name|freq
@@ -458,39 +483,6 @@ operator|.
 name|nextPosition
 argument_list|()
 decl_stmt|;
-comment|// For weight look here: http://lucene.apache.org/core/3_6_0/api/core/org/apache/lucene/search/DefaultSimilarity.html
-name|weight
-operator|=
-call|(
-name|float
-call|)
-argument_list|(
-name|Math
-operator|.
-name|log
-argument_list|(
-name|numDocs
-operator|/
-call|(
-name|double
-call|)
-argument_list|(
-name|reader
-operator|.
-name|docFreq
-argument_list|(
-name|fieldName
-argument_list|,
-name|text
-argument_list|)
-operator|+
-literal|1
-argument_list|)
-argument_list|)
-operator|+
-literal|1.0
-argument_list|)
-expr_stmt|;
 if|if
 condition|(
 name|dpEnum
